register internal extension